deploy/k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: intra-frontend
  namespace: intra
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: intra.darumtech.co.kr
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: intra-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: intra-frontend
                port:
                  number: 80
